--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,37 @@
 version: 2
 jobs:
-  build:
+  compile:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
       TERM: dumb
       MAVEN_OPTS: "-Xmx1024m"
     docker:
-      - image: circleci/java:8
-    branches:
-      ignore:
-        - /rel\/.*/
+      - image: circleci/openjdk:11-jdk
     steps:
       - checkout
+      - restore_cache:
+          key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
+      - run:
+          name: Run compile
+          command: mvn compile
+      - save_cache:
+          key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
+          paths:
+            - ~/.m2
+      - save_cache:
+          key: v1-cache-{{ .Environment.CIRCLE_WORKFLOW_ID }}
+          paths:
+            - ~/project
+  test-java11:
+    environment:
+      TZ: "/usr/share/zoneinfo/America/Los_Angeles"
+      TERM: dumb
+      MAVEN_OPTS: "-Xmx1024m"
+    docker:
+      - image: circleci/openjdk:11-jdk
+    steps:
+      - restore_cache:
+          key: v1-cache-{{ .Environment.CIRCLE_WORKFLOW_ID }}
       - restore_cache:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
       - run:
@@ -24,9 +44,6 @@ jobs:
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
             find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} ~/junit/ \;
           when: always
-      - deploy:
-          name: Deploy artifacts
-          command: ./.circleci/deploy_snapshot.sh
       - store_artifacts:
           path: ~/junit
       - store_test_results:
@@ -35,3 +52,11 @@ jobs:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
           paths:
             - ~/.m2
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - compile
+      - test-java11:
+          requires:
+            - compile
