--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,26 @@ jobs:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
           paths:
             - ~/.m2
+  deploy:
+    environment:
+      TZ: "/usr/share/zoneinfo/America/Los_Angeles"
+      TERM: dumb
+      MAVEN_OPTS: "-Xmx1024m"
+    docker:
+      - image: circleci/openjdk:11-jdk
+    steps:
+      - restore_cache:
+          key: v1-cache-{{ .Environment.CIRCLE_WORKFLOW_ID }}
+      - restore_cache:
+          key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
+      - run:
+          name: Deploy artifacts
+          command: ./.circleci/deploy_snapshot.sh
+      - save_cache:
+          key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
+          paths:
+            - ~/.m2
+
 workflows:
   version: 2
   build_and_test:
@@ -60,3 +80,12 @@ workflows:
       - test-java11:
           requires:
             - compile
+  build_and_deploy:
+    jobs:
+      - hold:
+          type: approval
+          requires:
+            - test-java11
+      - deploy:
+          requires:
+            - hold
