--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,3 +88,7 @@ workflows:
       - deploy:
           requires:
             - hold
+              filters:
+                branches:
+                  ignore:
+                    - /rel/.*/
