--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,9 +111,18 @@ workflows:
      #       branches:
      #         only:
      #           - /rel/.*/
+      - hold_release:
+          type: approval
+          requires:
+            - build
+            - test-java11
+      #     filters:
+      #       branches:
+      #         only:
+      #           - /rel/.*/
       - deploy-snapshot:
           requires:
             - hold
       - release:
           requires:
-            - hold
+            - hold_release
