--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,10 +100,10 @@ jobs:
 
 workflows:
   version: 2
-  build_alone:
-    when: << pipeline.parameters.run_workflow_build >>
-    jobs:
-      - build
+  #build_alone:
+  #  when: << pipeline.parameters.run_workflow_build >>
+  #  jobs:
+  #    - build
   build_and_test:
     jobs:
       - build
