--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,6 +101,6 @@ jobs:
 workflows:
   version: 2
   build_alone:
-  #  when: << pipeline.parameters.run_workflow_build >>
+    when: << pipeline.parameters.run_workflow_build >>
     jobs:
       - build
