--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,6 +115,8 @@ workflows:
     when: << pipeline.parameters.run_workflow_test >>
     jobs:
       - test-java11:
+          requires:
+            - build
           filters:
             branches:
               only:
