--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,3 +122,5 @@ workflows:
             branches:
               only:
                 - /user\/sv\/.*/
+              ignore:
+                - master
