--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,15 +108,15 @@ workflows:
   version: 2
   build_and_test_all_branches:
     jobs:
-      - build
-      - test-java11:
-          requires:
-            - build
+      - build:
           filters:
             branches:
               ignore:
                 - /rel\/.*/
                 - /user\/sv\/.*/
+      - test-java11:
+          requires:
+            - build
   build_test_deploy_snapshot:
     when: << pipeline.parameters.run_workflow_deploy_snapshot >>
     jobs:
