--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,6 @@ jobs:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
       - run:
           name: Update version
-          #command: mvn -B release:update-versions -DdevelopmentVersion=<< pipeline.parameters.snapshot-version >>
           command: ./.circleci/update_version.sh << pipeline.parameters.snapshot-version >>
       - run:
           name: Deploy snapshot artifacts
@@ -102,7 +101,8 @@ jobs:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
       - run:
           name: Prepare release
-          command: mvn release:prepare -B -DreleaseVersion=<< pipeline.parameters.release-version >>
+          command: ./.circleci/prepare_release.sh << pipeline.parameters.release-version >>
+         # command: mvn release:prepare -B -DreleaseVersion=<< pipeline.parameters.release-version >>
       - run:
           name: Deploy snapshot artifacts
           command: ./.circleci/release_gosu.sh
