--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,9 @@ jobs:
       - restore_cache:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
       - run:
+          name: import GPG key
+          command: echo -e "$GPG_KEY" | gpg --import
+      - run:
           name: Prepare and release
           command: ./.circleci/prepare_release.sh << pipeline.parameters.release-version >>
          # command: mvn release:prepare -B -DreleaseVersion=<< pipeline.parameters.release-version >>
