--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,32 @@ jobs:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
           paths:
             - ~/.m2
+  setup-rel-evn:
+    environment:
+      TZ: "/usr/share/zoneinfo/America/Los_Angeles"
+      TERM: dumb
+      MAVEN_OPTS: "-Xmx1024m"
+      docker:
+        - image: circleci/openjdk:11-jdk
+      steps:
+        - restore_cache:
+            key: v1-cache-{{ .Environment.CIRCLE_WORKFLOW_ID }}
+        - restore_cache:
+            key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
+        - run:
+            name: import GPG key
+            command: echo -e "$GPG_KEY" | gpg --import
+        - run:
+            name: Prepare and release
+            command: ./.circleci/prepare_release.sh << pipeline.parameters.release-version >>
+            # command: mvn release:prepare -B -DreleaseVersion=<< pipeline.parameters.release-version >>
+        #- run:
+        #    name: Deploy snapshot artifacts
+        #    command: ./.circleci/release_gosu.sh
+        - save_cache:
+            key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
+            paths:
+              - ~/.m2
   release:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
@@ -161,5 +187,21 @@ workflows:
             - build
             - test-java11
       - release:
+          requires:
+            - hold_release
+  build_setup-release-env:
+    when: << pipeline.parameters.run_workflow_release >>
+    jobs:
+      - build:
+          filters:
+            branches:
+              only:
+                - /rel\/.*/
+                - /user\/sv\/.*/
+      - hold_release:
+          type: approval
+          requires:
+            - build
+      - setup-rel-evn:
           requires:
             - hold_release
