--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,8 +74,7 @@ jobs:
           command: ./.circleci/update_version.sh << pipeline.parameters.snapshot-version >>
       - run:
           name: Deploy snapshot artifacts
-      #    command: ./.circleci/deploy_snapshot.sh
-          command: mvn deploy -Dmaven.main.skip=true -Dmaven.resources.skip=true -Dmaven.test.skip=true -s settings.xml -B
+          command: ./.circleci/deploy_snapshot.sh
       - save_cache:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
           paths:
@@ -94,7 +93,7 @@ jobs:
           name: Prepare and release
           command: ./.circleci/prepare_release.sh << pipeline.parameters.release-version >>
       - run:
-          name: Deploy snapshot artifacts
+          name: Release Gosu
           command: ./.circleci/release_gosu.sh
       - save_cache:
           key: v1-test-{{ checksum "gosu-parent/pom.xml" }}
