https://guidewirejira.atlassian.net/browse/ISPL-10654 - it is possible for binding expression parsing to cause a header-phase compiler cycle, which may cause enhancement indexing to fail. Fixing this requires a redesign of the binding expression parser implementation. But considering binding expressions are not officially supported by guidewire (only OS gosu), are undocumented, and are not supported in studio, there are likely ~zero customers aware of this feature, let alone using it in production. Therefore, binding expressions are now opt-in, must provide -DSUPPORT_BINDING_EXPR=true for gosu compiler invocation.

--- a/gosu-core-api-precompiled/pom.xml
+++ b/gosu-core-api-precompiled/pom.xml
@@ -56,6 +56,12 @@
             </goals>
             <configuration>
               <compilerId>gosuc</compilerId>
+              <fork>true</fork>
+              <meminitial>1024m</meminitial>
+              <maxmem>2048m</maxmem>
+              <compilerArgs>
+                <arg>-DSUPPORT_BINDING_EXPR=true</arg>
+              </compilerArgs>
             </configuration>
           </execution>
         </executions>
