--- a/gosu-test/pom.xml
+++ b/gosu-test/pom.xml
@@ -54,6 +54,7 @@
               <maxmem>2048m</maxmem>
               <compilerArgs>
                 <arg>-DcheckedArithmetic=true</arg>
+                <arg>-DSUPPORT_BINDING_EXPR=true</arg>
                 <!--<arg>-Xdebug</arg>-->
                 <!-- windows -->
                 <!--<arg>-Xrunjdwp:transport=dt_shmem,address=gosuc,server=y,suspend=y</arg> -->
@@ -90,7 +91,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Dgw.tests.skip.knownbreak=true -DcheckedArithmetic=true -Xmx2g</argLine>
+          <argLine>-Dgw.tests.skip.knownbreak=true -DcheckedArithmetic=true -DSUPPORT_BINDING_EXPR=true -Xmx2g</argLine>
           <excludes>
             <exclude>gw/internal/gosu/parser/java/*</exclude>
             <exclude>gw/test/SuiteTest*</exclude>
