--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -30,7 +30,7 @@
     <connection>${scm.root}/gosu-lang.git</connection>
     <developerConnection>${scm.root}/gosu-lang.git</developerConnection>
     <url>https://github.com/gosu-lang/gosu-lang</url>
-    <tag>v1.17.9</tag>
+    <tag>rel/1.18.1</tag>
   </scm>
 
   <properties>
