--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
   <scm>
     <developerConnection>${scm.root}/gosu-lang.git</developerConnection>
-    <tag>v1.17.9</tag>
+    <tag>rel/1.18.1</tag>
   </scm>
   
   <modules>
