--- a/gosu-core-api-precompiled/pom.xml
+++ b/gosu-core-api-precompiled/pom.xml
@@ -71,9 +71,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
+          <useDefaultManifestFile>false</useDefaultManifestFile>
+          <archive>
+            <addMavenDescriptor>false</addMavenDescriptor>
+          </archive>
           <excludes>
             <exclude>**/*.gs</exclude>
             <exclude>**/*.gsx</exclude>
+            <exclude>**/.DS_Store</exclude>
           </excludes>
         </configuration>
       </plugin>
