--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -101,11 +101,16 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
+          <useDefaultManifestFile>false</useDefaultManifestFile>
           <archive>
+            <addMavenDescriptor>false</addMavenDescriptor>
             <manifestEntries>
               <Contains-Sources>gs,gsx</Contains-Sources>
             </manifestEntries>
           </archive>
+          <excludes>
+            <exclude>**/.DS_Store</exclude>
+          </excludes>
         </configuration>
       </plugin>
     </plugins>
