--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -124,11 +124,16 @@
           <artifactId>maven-jar-plugin</artifactId>
           <version>2.3.2</version>
           <configuration>
+            <useDefaultManifestFile>false</useDefaultManifestFile>
             <archive>
+              <addMavenDescriptor>false</addMavenDescriptor>
               <manifest>
                 <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
               </manifest>
             </archive>
+            <excludes>
+              <exclude>**/.DS_Store</exclude>
+            </excludes>
           </configuration>
         </plugin>
         <plugin>
