--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.gosu-lang.gosu</groupId>
     <artifactId>gosu-parent</artifactId>
-    <version>1.18.5-SNAPSHOT</version>
+    <version>1.18.6-SNAPSHOT</version>
     <relativePath>gosu-parent</relativePath>
   </parent>
   <artifactId>gosu-proj</artifactId>
@@ -33,7 +33,7 @@
   </modules>
 
   <build>
-    <plugins>
+  <!--  <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
@@ -41,7 +41,7 @@
           <skip>true</skip>
         </configuration>
       </plugin>
-    </plugins>
+    </plugins>-->
   </build>
 
 </project>
