--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -35,34 +35,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <dist.man.snapshotrepo.url>https://oss.sonatype.org/content/repositories/snapshots</dist.man.snapshotrepo.url>
+    <dist.mvn.central.snapshotrepo.url>https://central.sonatype.com/repository/maven-snapshots/</dist.mvn.central.snapshotrepo.url>
     <scm.root>scm:git:git@github.com:gosu-lang</scm.root>
   </properties>
-
-  <repositories>
-    <repository>
-      <id>ossrh</id>
-      <name>Central Repository (snapshots)</name>
-      <url>${dist.man.snapshotrepo.url}</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>${dist.man.snapshotrepo.url}</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
 
   <build>
     <resources>
@@ -131,6 +106,24 @@
           </configuration>
         </plugin>
         <plugin>
+          <groupId>org.sonatype.central</groupId>
+          <artifactId>central-publishing-maven-plugin</artifactId>
+          <version>0.8.0</version>
+          <executions>
+            <execution>
+              <id>deploy-central</id>
+              <phase>deploy</phase>
+              <goals>
+                <goal>publish</goal>
+              </goals>
+            </execution>
+          </executions>
+          <extensions>true</extensions>
+          <configuration>
+            <publishingServerId>central</publishingServerId>
+          </configuration>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
@@ -167,6 +160,7 @@
           <artifactId>maven-release-plugin</artifactId>
           <version>2.5.3</version>
         </plugin>
+
       </plugins>
     </pluginManagement>
 
@@ -211,6 +205,24 @@
   </build>
 
   <profiles>
+    <profile>
+      <id>publish-to-GW</id>
+      <distributionManagement>
+        <repository>
+          <id>publish.to.gw.repository.id</id>
+          <url>${env.PUBLISH_TO_REPOSITORY_URL}</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+    <profile>
+      <id>central</id>
+      <distributionManagement>
+        <repository>
+          <id>central</id>
+          <url>${dist.mvn.central.snapshotrepo.url}</url>
+        </repository>
+      </distributionManagement>
+    </profile>
     <profile>
       <id>release</id>
       <build>
