--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   </modules>
 
   <build>
-    <plugins>
+  <!--  <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
@@ -41,7 +41,7 @@
           <skip>true</skip>
         </configuration>
       </plugin>
-    </plugins>
+    </plugins>-->
   </build>
 
 </project>
