--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -35,18 +35,15 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <dist.man.snapshotrepo.url>https://oss.sonatype.org/content/repositories/snapshots</dist.man.snapshotrepo.url>
+    <dist.mvn.central.snapshotrepo.url>https://central.sonatype.com/repository/maven-snapshots/</dist.mvn.central.snapshotrepo.url>
     <scm.root>scm:git:git@github.com:gosu-lang</scm.root>
   </properties>
 
-  <repositories>
+ <repositories>
     <repository>
-      <id>ossrh</id>
+      <id>central</id>
       <name>Central Repository (snapshots)</name>
-      <url>${dist.man.snapshotrepo.url}</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
+      <url>${dist.mvn.central.snapshotrepo.url}</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
@@ -55,12 +52,12 @@
 
   <distributionManagement>
     <snapshotRepository>
-      <id>ossrh</id>
-      <url>${dist.man.snapshotrepo.url}</url>
+      <id>central</id>
+      <url>${dist.mvn.central.snapshotrepo.url}</url>
     </snapshotRepository>
     <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <id>publish.to.repository.id</id>
+      <url>${env.PUBLISH_TO_REPOSITORY_URL}</url>
     </repository>
   </distributionManagement>
 
@@ -131,13 +128,31 @@
           </configuration>
         </plugin>
         <plugin>
+          <groupId>org.sonatype.central</groupId>
+          <artifactId>central-publishing-maven-plugin</artifactId>
+          <version>0.8.0</version>
+          <executions>
+            <execution>
+              <id>deploy-central</id>
+              <phase>deploy</phase>
+              <goals>
+                <goal>publish</goal>
+              </goals>
+            </execution>
+          </executions>
+          <extensions>true</extensions>
+          <configuration>
+            <publishingServerId>central</publishingServerId>
+          </configuration>
+        </plugin>
+        <!--<plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
           <configuration>
             <deployAtEnd>true</deployAtEnd>
           </configuration>
-        </plugin>
+        </plugin>-->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
@@ -167,6 +182,7 @@
           <artifactId>maven-release-plugin</artifactId>
           <version>2.5.3</version>
         </plugin>
+
       </plugins>
     </pluginManagement>
 
@@ -260,6 +276,33 @@
                 <phase>verify</phase>
                 <goals>
                   <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>publish</id>
+      <activation>
+        <property>
+          <name>gwPublish</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>3.1.2</version>
+            <executions>
+              <execution>
+                <id>default-deploy</id>
+                <phase>deploy</phase>
+                <goals>
+                  <goal>deploy</goal>
                 </goals>
               </execution>
             </executions>
