--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -50,16 +50,16 @@
     </repository>
   </repositories>-->
 
-  <distributionManagement>
- <!--   <snapshotRepository>
+<!--  <distributionManagement>
+    <snapshotRepository>
       <id>central</id>
       <url>${dist.mvn.central.snapshotrepo.url}</url>
-    </snapshotRepository>-->
+    </snapshotRepository>
     <repository>
       <id>publish.to.repository.id</id>
       <url>${env.PUBLISH_TO_REPOSITORY_URL}</url>
     </repository>
-  </distributionManagement>
+  </distributionManagement>-->
 
   <build>
     <resources>
@@ -145,14 +145,14 @@
             <publishingServerId>central</publishingServerId>
           </configuration>
         </plugin>
-        <!--<plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
           <configuration>
             <deployAtEnd>true</deployAtEnd>
           </configuration>
-        </plugin>-->
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
@@ -228,6 +228,24 @@
 
   <profiles>
     <profile>
+      <id>publish-to-GW</id>
+      <distributionManagement>
+        <repository>
+          <id>publish.to.gw.repository.id</id>
+          <url>${env.PUBLISH_TO_REPOSITORY_URL}</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+    <profile>
+      <id>central</id>
+      <distributionManagement>
+        <repository>
+          <id>central</id>
+          <url>${dist.mvn.central.snapshotrepo.url}</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+    <profile>
       <id>release</id>
       <build>
         <plugins>
@@ -276,33 +294,6 @@
                 <phase>verify</phase>
                 <goals>
                   <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>publish</id>
-      <activation>
-        <property>
-          <name>gwPublish</name>
-          <value>true</value>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-deploy-plugin</artifactId>
-            <version>2.8.2</version>
-            <executions>
-              <execution>
-                <id>default-deploy</id>
-                <phase>deploy</phase>
-                <goals>
-                  <goal>deploy</goal>
                 </goals>
               </execution>
             </executions>
