--- a/gosu-parent/pom.xml
+++ b/gosu-parent/pom.xml
@@ -109,6 +109,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
+          <executions>
+            <execution>
+              <id>default-deploy</id>
+              <phase>none</phase>
+            </execution>
+          </executions>
           <configuration>
             <deployAtEnd>true</deployAtEnd>
           </configuration>
