--- a/gosu-core-api/pom.xml
+++ b/gosu-core-api/pom.xml
@@ -37,6 +37,11 @@
       <artifactId>manifold</artifactId>
       <version>2024.1.38</version>
     </dependency>
+    <dependency>
+      <groupId>org.gosu-lang.gosu.managed</groupId>
+      <artifactId>gw-gson</artifactId>
+      <version>2.13.1</version>
+    </dependency>
   </dependencies>
 
   <build>
