Improvements to incremental compilation support for gosuc
 - Enhanced dependency tracking using AST traversal to capture static method calls and member access
 - Output file tracking using OutputTrackingCompilerDriver wrapper pattern
 - Integration tests with proper Maven Failsafe plugin isolation - this was necessary since TypeSystem init in IncrementalCompilationEndToEnd will "pollute" the test VM - Failsafe runs the test in a separate JVM

--- a/gosu-test/pom.xml
+++ b/gosu-test/pom.xml
@@ -116,6 +116,22 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <argLine>-Dgw.tests.skip.knownbreak=true -DcheckedArithmetic=true -Xmx2g</argLine>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   
