--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,23 @@ jobs:
     - name: Run tests
       run: mvn verify -B
       
-    - name: Generate test report
+    - name: Generate test summary
       uses: dorny/test-reporter@v1
       if: success() || failure()
       with:
-        name: Maven Tests (Java ${{ matrix.java }})
+        name: Maven Tests Summary (Java ${{ matrix.java }})
         path: '**/target/surefire-reports/TEST-*.xml'
         reporter: java-junit
         fail-on-error: true
+        max-annotations: 10
+        only-summary: true
+    
+    - name: Upload detailed test reports
+      uses: actions/upload-artifact@v4
+      if: success() || failure()
+      with:
+        name: test-reports-java-${{ matrix.java }}
+        path: |
+          **/target/surefire-reports/
+          **/target/failsafe-reports/
+        retention-days: 30
