[CI] Allow membership check to see org/team member info

--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -17,6 +17,9 @@ jobs:
   check-membership:
     runs-on: ubuntu-latest
     if: github.repository == 'gosu-lang/gosu-lang'
+    permissions:
+      contents: read
+      members: read
     outputs:
       is-member: ${{ steps.check.outputs.is-member }}
     steps:
