--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -19,25 +19,25 @@ jobs:
     if: github.repository == 'gosu-lang/gosu-lang'
     permissions:
       contents: read
-      members: read
     outputs:
       is-member: ${{ steps.check.outputs.is-member }}
     steps:
-    - name: Check team membership
+    - name: Check repository permissions
       id: check
       uses: actions/github-script@v7
       with:
         script: |
           try {
-            const membership = await github.rest.teams.getMembershipForUserInOrg({
-              org: 'gosu-lang',
-              team_slug: 'core',
+            const permission = await github.rest.repos.getCollaboratorPermissionLevel({
+              owner: 'gosu-lang',
+              repo: 'gosu-lang',
               username: context.actor
             });
-            console.log(`User ${context.actor} team membership: ${membership.data.state}`);
-            return membership.data.state === 'active';
+            console.log(`User ${context.actor} repository permission: ${permission.data.permission}`);
+            const allowedRoles = ['admin', 'maintain'];
+            return allowedRoles.includes(permission.data.permission);
           } catch (error) {
-            console.log(`User ${context.actor} is not a member of the core team: ${error.message}`);
+            console.log(`Permission check failed: ${error.message}`);
             return false;
           }
 
