[CI] Fix job name

--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -14,7 +14,7 @@ on:
         type: string
 
 jobs:
-  check-membership:
+  check-permissions:
     runs-on: ubuntu-latest
     if: github.repository == 'gosu-lang/gosu-lang'
     permissions:
@@ -43,8 +43,8 @@ jobs:
 
   publish-snapshot:
     runs-on: ubuntu-latest
-    needs: check-membership
-    if: needs.check-membership.outputs.is-member == 'true'
+    needs: check-permissions
+    if: needs.check-permissions.outputs.is-member == 'true'
     
     steps:
     - name: Checkout
