[CI] Enable snapshot publishing

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -116,7 +116,7 @@ jobs:
     
     - name: Publish snapshot to Maven Central
       if: steps.should-publish.outputs.is-push == 'true' && steps.check-perms.outputs.can-publish == 'true'
-      run: mvn deploy -Pcentral -DskipTests=true -B
+      run: mvn deploy -Pcentral -DskipTests=true -Dmaven.deploy.skip=false -B
       env:
         SNAPSHOT_USER_CENTRAL: ${{ secrets.SNAPSHOT_USER_CENTRAL }}
         SNAPSHOT_PASS_CENTRAL: ${{ secrets.SNAPSHOT_PASS_CENTRAL }}
